--- a/menu.html
+++ b/menu.html
@@ -51,11 +51,11 @@
                 </div>
                 <br>
                 <div class="pietanza">
-                    <p>Polpettine rapa e patate con fonduta di caciocavallo ............ 3pz 4,00€- 5pz 6,00€</p>
+                    <p>Polpettine rapa e patate con fonduta di caciocavallo ............ 3pz 5,00€- 5pz 7,00€</p>
                 </div>
                 <br>
                 <div class="pietanza">
-                    <p>Polpettine bacon e provola con fonduta di caciocavallo .................. 3pz 4,00€- 5pz 6,00€</p>
+                    <p>Polpettine bacon e provola con fonduta di caciocavallo .................. 3pz 5,00€- 5pz 7,00€</p>
                 </div>
                 <br>
                 <div class="pietanza">
@@ -71,7 +71,7 @@
                 </div>
                 <br>
                 <div class="pietanza">
-                    <p>Crocchè Classico con mozzarella.................. 1,00€</p>
+                    <p>Crocchè Classico con mozzarella.................. 1,50€</p>
                 </div>
                 <br>
                 <div class="pietanza">
@@ -83,7 +83,7 @@
                 </div>
                 <br>
                 <div class="pietanza">
-                    <p>Arancino porcini e provola .................. 2,50€</p>
+                    <p>Arancino classico .................. 2,50€</p>
                 </div>
             </div>
         </div>
