--- a/menu.html
+++ b/menu.html
@@ -158,6 +158,11 @@
             </div>
             <br>
             <div class="pietanza">
+                <p>Cosaca ............ 4,50€</p>
+                <p>Pomodoro, parmigiano grattuggiato, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
                 <p>Margherita ............ 4,50€</p>
                 <p>Pomodoro, mozzarella, basilico e olio evo</p>
             </div>
