--- a/menu.html
+++ b/menu.html
@@ -158,7 +158,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p>Cosaca ............ 4,50€</p>
+                <p>Cosacca ............ 4,50€</p>
                 <p>Pomodoro, parmigiano grattuggiato, basilico e olio evo</p>
             </div>
             <br>
