--- a/menu.html
+++ b/menu.html
@@ -173,6 +173,11 @@
             </div>
             <br>
             <div class="pietanza">
+                <p>Provola e pepe ............ 6,00€</p>
+                <p>Pomodoro, provola, pepe, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
                 <p>Bufalina ............ 6,50€</p>
                 <p>Pomodoro, mozzarella di bufala, basilico e olio evo</p>
             </div>
