--- a/menu.html
+++ b/menu.html
@@ -192,9 +192,24 @@
                 <p>Mozzarella , wurstel, patatine, basilico e olio evo</p>
             </div>
             <br>
+             <div class="pietanza">
+                <p>Tedesca ............ 6,50€</p>
+                <p>Mozzarella , wurstel, patatine, basilico e olio evo</p>
+            </div>
+            <br>
             <div class="pietanza">
                 <p>Tonnarella ............ 7,00€</p>
                 <p>Mozzarella, tonno, cipolla, basilico e olio evo</p>
+            </div>
+            <br>
+             <div class="pietanza">
+                <p>Ortolana ............ 7,00€</p>
+                <p>Peperoni, melanzane, mozzarella, basilico e olio evo</p>
+            </div>
+            <br>
+             <div class="pietanza">
+                <p>Mimosa ............ 7,00€</p>
+                <p>Panna, mais, prosciutto, cotto, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
@@ -207,9 +222,9 @@
                 <p>Patate al forno, provola, pancetta, funghi, crocchè, basilico e olio evo</p>
             </div>
             <br>
-            <div class="pietanza">
-                <p>Ortolana ............ 7,00€</p>
-                <p>Peperoni, melanzane, mozzarella, basilico e olio evo</p>
+             <div class="pietanza">
+                <p>Fiocco ............ 7,50€</p>
+                <p>Mozzarella, vellutata di patate, prosciutto cotto, pepe, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
@@ -217,24 +232,34 @@
                 <p>Caciocavallo, gorgonzola, emmenthal, parmigiano, basilico e olio evo</p>
             </div>
             <br>
+             <div class="pietanza">
+                <p>Paesana ............ 8,00€</p>
+                <p>Mozzarella , patate schiacciate, salsiccia, basilico e olio evo</p>
+            </div>
+            <br>
             <div class="pietanza">
                 <p>Bronte ............ 9,00€</p>
                 <p>Crema di pistacchio, mozzarella , mortadella, stracciata, basilico e olio evo</p>
             </div>
             <br>
-            <div class="pietanza">
-                <p>Mimosa ............ 7,00€</p>
-                <p>Panna, mais, prosciutto, cotto, basilico e olio evo</p>
+             <div class="pietanza">
+                <p>Crispy ............ 9,00€</p>
+                <p>Mozzarella ,patatine dippers, bacon croccante, fonduta di cheddar, basilico e olio evo</p>
+            </div>
+            <br>
+             <div class="pietanza">
+                <p>Porchettina ............ 9,50€</p>
+                <p>Mozzarella , porchetta, patate al forno, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Fiocco ............ 7,50€</p>
-                <p>Mozzarella, vellutata di patate, prosciutto cotto, pepe, basilico e olio evo</p>
+                <p>Nerano ............ 10,00€</p>
+                <p>Crema di zucchine, chips di zucchine, mozzarella, polpettine, fonduta di caciocavallo, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Paesana ............ 8,00€</p>
-                <p>Mozzarella, patate schiacciate, salsiccia e olio evo</p>
+                <p>Carbonaccia ............ 12,00€</p>
+                <p>Carbocrema , mozzarella, pancetta, cipolla, pepe, parmigiano, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
