--- a/menu.html
+++ b/menu.html
@@ -348,38 +348,6 @@
     </div>
 </section>
 
-<section id="menu">
-    <div class="box">
-        <br>
-        <p class="title">Dolci</p>
-        <hr>
-        <div class="container-menu">
-            <div class="pietanza">
-                <p>Cannolo scomposto ............ 4,00€</p>
-            </div>
-            <br>
-            <div class="pietanza">
-                <p>Tiramisù ............ 4,00€</p>
-            </div>
-            <br>
-            <div class="pietanza">
-                <p>Cuore caldo ............ 4,00€</p>
-            </div>
-            <br>
-            <div class="pietanza">
-                <p>Pizzatella ............ 6,00€</p>
-            </div>
-            <br>
-            <div class="pietanza">
-                <p>Straccetti alla nutella ............ 6,00€</p>
-            </div>
-            <br>
-            <div class="pietanza">
-                <p>Straccetti al pistacchio ............ 7,00€</p>
-            </div>
-        </div>
-    </div>
-</section>
 
 <section id="menu">
     <div class="box">
@@ -450,6 +418,50 @@
             <div class="pietanza">
                 <p>Liquori/Amari ............ 3,00€</p>
             </div>
+        </div>
+    </div>
+</section>
+
+    <section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">Dolci</p>
+        <hr>
+        <div class="container-menu">
+            <div class="pietanza">
+                <p>Cannolo scomposto ............ 4,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Tiramisù ............ 4,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Cuore caldo ............ 4,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Pizzatella ............ 6,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Straccetti alla nutella ............ 6,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Straccetti al pistacchio ............ 7,00€</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">Coperto</p>
+        <hr>
+        <div class="container-menu">
             <br>
             <div class="pietanza">
                 <p>Coperto ............ 1,50€</p>
