--- a/menu.html
+++ b/menu.html
@@ -371,12 +371,32 @@
                 <p>Fanta in bottiglia ............ 3,00€</p>
             </div>
             <br>
+             <div class="pietanza">
+                <p>Sprite in bottiglia ............ 3,00€</p>
+            </div>
+            <br>
+             <div class="pietanza">
+                <p> Estathè in lattina............ 3,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Beck's 33 cl ............ 3,00€</p>
+            </div>
+            <br>
             <div class="pietanza">
                 <p>Heineken 33 cl ............ 3,00€</p>
             </div>
             <br>
             <div class="pietanza">
                 <p>Heineken 66 cl ............ 5,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Nastro Azzurro 33 cl............ 3,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Nastro azzurro 66 cl ............ 5,00€</p>
             </div>
             <br>
             <div class="pietanza">
@@ -404,11 +424,11 @@
             </div>
             <br>
             <div class="pietanza">
-                <p>Vino bianco frizzante Pizza Wine ............ 12,00€</p>
+                <p>Vino bianco frizzante Pizza Wine bott. 0,75 cl ............ 12,00€</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Vino rosso frizzante Gragnano ............ 15,00€</p>
+                <p>Vino rosso frizzante Gragnano bott. 0,75 cl ............ 15,00€</p>
             </div>
             <br>
             <div class="pietanza">
@@ -437,7 +457,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p>Cuore caldo ............ 4,00€</p>
+                <p>Cuore caldo cioccolato/cioccolato bianco/pistacchio ............ 5,00€</p>
             </div>
             <br>
             <div class="pietanza">
@@ -445,7 +465,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p>Straccetti alla nutella ............ 6,00€</p>
+                <p>Straccetti alla nutella ............ 7,00€</p>
             </div>
             <br>
             <div class="pietanza">
