--- a/menu.html
+++ b/menu.html
@@ -277,13 +277,18 @@
         <hr>
         <div class="container-menu">
             <div class="pietanza">
-                <p>Noemi ............ 10,00€</p>
-                <p>Pomodoro,Cornicione ripieno di ricotta, mozzarella, polpettine di carne, fonduta di parmigiano, basilico e olio evo</p>
+                <div class="pietanza">
+                <p>Dalia ............ 9,50€</p>
+                <p>Crema di tartufo,salsiccia, patate al forno, funghi porcini, provola, basilico e olio evo</p>
+            </div>
+            <br>
+                <p>Anthony ............ 8,00€</p>
+                <p>Pomodoro, mozzarella, melanzane fritte, fonduta di parmigiano, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Anthony ............ 8,00€</p>
-                <p>Pomodoro, mozzarella, melanzane fritte, fonduta di parmigiano, basilico e olio evo</p>
+                <p>Noemi ............ 10,00€</p>
+                <p>Pomodoro,Cornicione ripieno di ricotta, mozzarella, polpettine di carne, fonduta di parmigiano, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
@@ -292,8 +297,8 @@
             </div>
             <br>
             <div class="pietanza">
-                <p>Dalia ............ 9,50€</p>
-                <p>Crema di tartufo, salsiccia, funghi porcini, provola, basilico e olio evo</p>
+                <p>Nonno Vincenzo ............ 8,50€</p>
+                <p>Pomodoro, mozzarella, salsiccia, funghi porcini, provola affumicata, pepe, basilico e olio evo</p>
             </div>
         </div>
     </div>
