--- a/menu.html
+++ b/menu.html
@@ -153,7 +153,7 @@
         <hr>
         <div class="container-menu">
             <div class="pietanza">
-                <p> <b>Marinara............ 4,00€</b></p>
+                <p><b><span class="color-pietanza">Marinara............ 4,00€</span></b></p>
                 <p>Pomodoro, origano, aglio acciughe olive</p>
             </div>
             <br>
