--- a/menu.html
+++ b/menu.html
@@ -158,112 +158,112 @@
             </div>
             <br>
             <div class="pietanza">
-                <p>Cosacca ............ 4,50€</p>
+                <p><span class="color-pietanza">Cosacca ............ 4,50€ </span></b></p>
                 <p>Pomodoro, parmigiano grattuggiato, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Margherita ............ 4,50€</p>
+                <p><span class="color-pietanza">Margherita ............ 4,50€ </span></b></p>
                 <p>Pomodoro, mozzarella, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Diavola ............ 6,00€</p>
+                <p><span class="color-pietanza">Diavola ............ 6,00€ </span></b></p>
                 <p>Pomodoro, spianata piccante, mozzarella, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Provola e pepe ............ 6,00€</p>
+                <p><span class="color-pietanza">Provola e Pepe ............ 6,00€ </span></b></p>
                 <p>Pomodoro, provola, pepe, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Bufalina ............ 6,50€</p>
+                <p><span class="color-pietanza">Bufalina ............ 6,50€ </span></b></p>
                 <p>Pomodoro, mozzarella di bufala, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Capricciosa ............ 7,50€</p>
+                <p><span class="color-pietanza">Capricciosa ............ 7,50€ </span></b></p>
                 <p>Pomodoro, carciofi, olive, salame, prosciutto cotto, funghi, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Americana ............ 7,00€</p>
+                <p><span class="color-pietanza">Americana ............ 7,00€ </span></b></p>
                 <p>Mozzarella , wurstel, patatine, basilico e olio evo</p>
             </div>
             <br>
              <div class="pietanza">
-                <p>Tedesca ............ 6,50€</p>
+                <p><span class="color-pietanza">Tedesca ............ 6,50€ </span></b></p>
                 <p>Mozzarella , wurstel, patatine, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Tonnarella ............ 7,00€</p>
+                <p><span class="color-pietanza">Tonnarella ............ 7,00€ </span></b></p>
                 <p>Mozzarella, tonno, cipolla, basilico e olio evo</p>
             </div>
             <br>
              <div class="pietanza">
-                <p>Ortolana ............ 7,00€</p>
+                <p><span class="color-pietanza">Ortolana ............ 7,00€ </span></b></p>
                 <p>Peperoni, melanzane, mozzarella, basilico e olio evo</p>
             </div>
             <br>
              <div class="pietanza">
-                <p>Mimosa ............ 7,00€</p>
+                <p><span class="color-pietanza">Mimosa ............ 7,00€ </span></b></p>
                 <p>Panna, mais, prosciutto, cotto, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Salsiccia e friarielli ............ 7,00€</p>
+                <p><span class="color-pietanza">Salsiccia e friarielli ............ 7,00€ </span></b></p>
                 <p>Mozzarella, salsiccia, friarielli e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Croccopizza ............ 8,50€</p>
+                <p><span class="color-pietanza">Croccopizza ............ 8,50€ </span></b></p>
                 <p>Patate al forno, provola, pancetta, funghi, crocchè, basilico e olio evo</p>
             </div>
             <br>
              <div class="pietanza">
-                <p>Fiocco ............ 7,50€</p>
+                <p><span class="color-pietanza">Fiocco ............ 7,50€ </span></b></p>
                 <p>Mozzarella, vellutata di patate, prosciutto cotto, pepe, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Quattro Formaggi ............ 8,00€</p>
+                <p><span class="color-pietanza">Quattro Formaggi ............ 8,00€ </span></b></p>
                 <p>Caciocavallo, gorgonzola, emmenthal, parmigiano, basilico e olio evo</p>
             </div>
             <br>
              <div class="pietanza">
-                <p>Paesana ............ 8,00€</p>
-                <p>Mozzarella , patate schiacciate, salsiccia, basilico e olio evo</p>
+                <p><span class="color-pietanza">Paesana ............ 8,00€ </span></b></p>
+                <p>Mozzarella, patate schiacciate, salsiccia, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Bronte ............ 9,00€</p>
+                <p><span class="color-pietanza">Bronte ............ 9,00€ </span></b></p>
                 <p>Crema di pistacchio, mozzarella , mortadella, stracciata, basilico e olio evo</p>
             </div>
             <br>
              <div class="pietanza">
-                <p>Crispy ............ 9,00€</p>
-                <p>Mozzarella ,patatine dippers, bacon croccante, fonduta di cheddar, basilico e olio evo</p>
+                <p><span class="color-pietanza">Crispy ............ 9,00€ </span></b></p>
+                <p>Mozzarella, patatine dippers, bacon croccante, fonduta di cheddar, basilico e olio evo</p>
             </div>
             <br>
              <div class="pietanza">
-                <p>Porchettina ............ 9,50€</p>
-                <p>Mozzarella , porchetta, patate al forno, basilico e olio evo</p>
+                <p><span class="color-pietanza">Porchettina ............ 9,50€ </span></b></p>
+                <p>Mozzarella, porchetta, patate al forno, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Nerano ............ 10,00€</p>
+                <p><span class="color-pietanza">Nerano ............ 10,00€ </span></b></p>
                 <p>Crema di zucchine, chips di zucchine, mozzarella, polpettine, fonduta di caciocavallo, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Carbonaccia ............ 12,00€</p>
-                <p>Carbocrema , mozzarella, pancetta, cipolla, pepe, parmigiano, basilico e olio evo</p>
+                <p><span class="color-pietanza">Carbonaccia ............ 12,00€ </span></b></p>
+                <p>Carbocrema, mozzarella, pancetta, cipolla, pepe, parmigiano, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Pizzatella ............ 6,00€</p>
+                <p><span class="color-pietanza">Pizzatella ............ 6,00€ </span></b></p>
                 <p>Nutella e zucchero a velo</p>
             </div>
         </div>
@@ -277,27 +277,27 @@
         <hr>
         <div class="container-menu">
             <div class="pietanza">
-                <div class="pietanza">
-                <p>Dalia ............ 9,50€</p>
+                <p><span class="color-pietanza">Dalia ............ 9,50€ </span></b></p>
                 <p>Crema di tartufo,salsiccia, patate al forno, funghi porcini, provola, basilico e olio evo</p>
             </div>
             <br>
-                <p>Anthony ............ 8,00€</p>
+            <div class="pietanza">
+                <p><span class="color-pietanza">Anthony ............ 8,00€ </span></b></p>
                 <p>Pomodoro, mozzarella, melanzane fritte, fonduta di parmigiano, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Noemi ............ 10,00€</p>
+                <p><span class="color-pietanza">Noemi ............ 10,00€ </span></b></p>
                 <p>Pomodoro,Cornicione ripieno di ricotta, mozzarella, polpettine di carne, fonduta di parmigiano, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Alessandro ............ 9,50€</p>
+                <p><span class="color-pietanza">Alessandro ............ 9,50€ </span></b></p>
                 <p>Mozzarella, bresaola, pomodorini, rucola, scaglie di grana e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Nonno Vincenzo ............ 8,50€</p>
+                <p><span class="color-pietanza">Nonno Vincenzo ............ 4,50€ </span></b></p>
                 <p>Pomodoro, mozzarella, salsiccia, funghi porcini, provola affumicata, pepe, basilico e olio evo</p>
             </div>
         </div>
@@ -311,18 +311,18 @@
         <hr>
         <div class="container-menu">
             <div class="pietanza">
-                <p>Calzone al forno ............ 7,00€</p>
+                <p><span class="color-pietanza">Calzone al forno ............ 7,00€ </span></b></p>
                 <p>Salame, ricotta, mozzarella, pomodoro</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Calzone fritto ............ 7,00€</p>
+                <p><span class="color-pietanza">Calzone fritto ............ 7,00€ </span></b></p>
                 <p>Prosciutto cotto, ricotta, mozzarella, pomodoro</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Tronchetto ............ 9,00€</p>
-                <p>Emmenthal , mozzarella, prosciutto crudo scaglie di parmigiano, rucola e pomodorini</p>
+                <p><span class="color-pietanza">Tronchetto ............ 9,00€ </span></b></p>
+                <p>Emmenthal, mozzarella, prosciutto crudo scaglie di parmigiano, rucola e pomodorini</p>
             </div>
         </div>
     </div>
