--- a/menu.html
+++ b/menu.html
@@ -339,7 +339,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span class="color-pietanza">Bresaola  rucola e  scaglie di  parmigiano</span> <span class="color-pietanza">8,00€</span></b></p>
+                <p><b><span class="color-pietanza">Bresaola rucola e scaglie diㅤ parmigiano</span> <span class="color-pietanza">8,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
